# poetry_issue_5799_repro

./: LICENSE  README.md  pyproject.toml
.github/workflows/: issue_repro.yml
